--- a/app/views/articles/_new.html.haml
+++ b/app/views/articles/_new.html.haml
@@ -20,4 +20,5 @@
   })
 
 %h1 New research Feed
+= render :partial => "shared/learnmore"
 = render :partial => "form", :locals => {:article => article}
