--- a/public/stylesheets/sass/_articles.sass
+++ b/public/stylesheets/sass/_articles.sass
@@ -36,8 +36,6 @@ span.match
     width: 60%
 
 #search_form
-  padding-left: 100px
-  margin-bottom: 10px
   #advanced_search
     input[type=text]
       width: 60%
@@ -47,7 +45,7 @@ span.match
 #simple_search
   input#search
     height: 18px
-    background: url(../images/search.png) no-repeat 2px 2px
+    background: url(../images/search.png) white no-repeat 2px 2px
     padding-left: 20px
     border: 1px solid #aaa
   &.loading
