--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -2,67 +2,67 @@
   #sidebar.left
     = render :partial => "layouts/logo_box"
     %h1 Filter Tasks
+    = render :partial => "shared/learnmore"
+    %br  
+    #simple_search{:style => params[:search].is_a?(Hash) ? "display:none" : "" }
+      = text_field_tag "search", params[:search], :size => 27, :autocomplete => "off"
+      = submit_tag "Search"
+    %br  
     = filter_html("tasks_index")
-  
-  #content.right
-    = render :partial => "layouts/header"
-    %table.index
-      %tr
-        %td.top
-          #search_form
-            #simple_search{:style => params[:search].is_a?(Hash) ? "display:none" : "" }
-              %center
-                = text_field_tag "search", params[:search], :size => 60, :autocomplete => "off"
-                = submit_tag "Search"
-                &nbsp;&nbsp;
-                = link_to "New Task", new_project_task_path
-          %br
-          - if @tasks.empty?
-            %b
-              No tasks !
-          - else
-            %table
-              %tr.header
-                %th
-                %th
-                  = sort_link 'Name', :name
-                %th
-                  = sort_link 'Initiator', :created_by
-                %th
-                  = sort_link 'Asignee', :assign_to
-                %th
-                  = sort_link 'Updated', :updated_at      
-                %th.right
-                  = sort_link 'Due', :due_date
-                %th
-              - @tasks.each do |task|
-                %tr{ :class => cycle(:odd, :even) }
-                  %td
-                    = image_tag(task.priority_image)
-                  %td.min350.left
-                    - if task.deleted_at?
-                      %del
-                        = link_to truncate(task.to_s, 45, "..."), edit_project_task_path(task.project, task)
-                    - else
-                      = link_to truncate(task.to_s, 45, "..."), edit_project_task_path(task.project, task)
-                  %td.gray
-                    = truncate(task.initiator.to_s(), 25, "...")
-                  %td.gray
-                    = truncate(task.assignee.to_s(), 25, "...")
-                  %td.gray
-                    = time_ago_in_words(task.updated_at)
-                    ago
-                  %td.right
-                    = smart_due_date(task.due_date)
+
+#content.right
+  = render :partial => "layouts/header"
+  %table.index
+    %tr
+      %td.top
+        = render :partial => 'new'
+        %br
+        - if @tasks.empty?
+          %b
+            No tasks !
+        - else
+          %table
+            %tr.header
+              %th
+              %th
+                = sort_link 'Name', :name
+              %th
+                = sort_link 'Initiator', :created_by
+              %th
+                = sort_link 'Asignee', :assign_to
+              %th
+                = sort_link 'Updated', :updated_at      
+              %th.right
+                = sort_link 'Due', :due_date
+              %th
+            - @tasks.each do |task|
+              %tr{ :class => cycle(:odd, :even) }
+                %td
+                  = image_tag(task.priority_image)
+                %td.min350.left
                   - if task.deleted_at?
-                    %td
-                      = link_to "Reopen", [:reopen, @project, task]
-                  - else  
-                    %td
-                      = link_to image_tag('delete.png'), [@project, task], :method => :delete                          
-              %tr
-              %tr
-              %tr{ :align => "right" }
-                %td{ :colspan => "5" }
-                  = will_paginate @tasks
+                    %del
+                      = link_to truncate(task.to_s, 45, "..."), edit_project_task_path(task.project, task)
+                  - else
+                    = link_to truncate(task.to_s, 45, "..."), edit_project_task_path(task.project, task)
+                %td.gray
+                  = truncate(task.initiator.to_s(), 25, "...")
+                %td.gray
+                  = truncate(task.assignee.to_s(), 25, "...")
+                %td.gray
+                  = time_ago_in_words(task.updated_at)
+                  ago
+                %td.right
+                  = smart_due_date(task.due_date)
+                - if task.deleted_at?
+                  %td
+                    = link_to "Reopen", [:reopen, @project, task]
+                - else  
+                  %td
+                    = link_to image_tag('delete.png'), [@project, task], :method => :delete                          
+            %tr
+            %tr
+            %tr{ :align => "right" }
+              %td{ :colspan => "5" }
+                = will_paginate @tasks
 .clear
