--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -16,7 +16,7 @@
           %th
             One Line Bio
         - @users.each do |user|
-          %tr{ :class => cycle(:odd, :even) }
+          %tr{ :class => cycle(:content1, :content2) }
             %td
               = image_tag(profile_image(user.login_email), {:width => 50, :height => 50})
             %td
