--- a/app/views/alerts/_list.html.haml
+++ b/app/views/alerts/_list.html.haml
@@ -11,13 +11,13 @@
             = truncate a.alertable_s, trunc_hash
         - else
           - if a.alertable_type != "Asset"
-            = link_to(truncate (a.alertable_s, trunc_hash)), [@project, a.alertable]
+            = link_to truncate(a.alertable_s, trunc_hash), [@project, a.alertable]
           - elsif a.alertable_type == "Asset"  
             - if a.alertable.image?
               = image_tag(a.alertable.url, :size => "17x19")
             - else
               = image_tag(a.alertable.file_icon, :size => "17x19")
-            = link_to(truncate a.alertable_s, trunc_hash), [@project, a.alertable]
+            = link_to truncate(a.alertable_s, trunc_hash), [@project, a.alertable]
       %td.none
         = smart_due_date_s(a.due_date) 
       %td.right
