--- a/app/views/alerts/index.html.haml
+++ b/app/views/alerts/index.html.haml
@@ -1,6 +1,6 @@
-- content_for :sidebar do
-  %h1 Filter Alerts
-  = render :partial => "shared/learnmore"
-  = filter_html("alerts_index")
-    
-= render :partial => "alerts/list"
+- form_tag project_alerts_path, :method => :get do
+  - content_for :sidebar do
+    %h1 Filter Alerts
+    = render :partial => "shared/learnmore"
+    = filter_html("alerts_index")
+  = render :partial => "alerts/list"
