--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -158,6 +158,12 @@ span.gray
   background-color: white
   +box-shadow("0px 0px 6px #A8A6A0")
   +border-radius("4px")
+  h1
+    background-color: #E1EEFA
+    color: #787D7B
+    text-align: center
+    padding: 15px
+    line-height: 1
   .menu
     a
       padding: 2px 10px 2px 10px
