--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -509,6 +509,12 @@ span.gray {
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px; }
+  #content h1 {
+    background-color: #E1EEFA;
+    color: #787D7B;
+    text-align: center;
+    padding: 15px;
+    line-height: 1; }
   #content .menu a {
     padding: 2px 10px 2px 10px; }
   #content .menu a.current {
