--- a/public/stylesheets/sass/_formtastic.sass
+++ b/public/stylesheets/sass/_formtastic.sass
@@ -24,6 +24,10 @@ form.formtastic
       label
         display: block !important
   
+  &.loading
+    li.commit
+      padding-right: 25px
+      background: url("../images/spinner.gif") right center no-repeat
   &.labels-within-fields
     label.error
       :padding 0
