--- a/app/views/timelogs/_form.html.haml
+++ b/app/views/timelogs/_form.html.haml
@@ -5,5 +5,6 @@
     = f.input :timesheet_description
     = f.input :date, :as => :string, :input_html => {:class => "datepicker"}
     = f.input :hours
-  = f.buttons
+  - f.buttons do
+    = f.commit_button "Log time"
 .clear
