--- a/app/views/project_roles/index.html.haml
+++ b/app/views/project_roles/index.html.haml
@@ -1,25 +1,12 @@
 - content_for :sidebar do
   %h1
     Project Members
-
-
-- pending_invitations = @project.invitations.confirmed_is(false)
-- if pending_invitations.present?
-  %h3 Pending Invitations
-  - pending_invitations.each do |invitation|
-    %p
-      - if invitation.user
-        = link_to invitation.user, invitation.user
-      - else
-        = invitation.user_email
-  %br
-
+%br
 - semantic_form_for [@project, @project.invitations.new] do |f|
   - f.inputs do
     = f.input :invitee, :label => "Invite new member", :hint => "Username or email of user who you are inviting"
   - f.buttons do
     = f.commit_button "Send Invitation"
-
 %br
 %br  
 %table.index
@@ -33,3 +20,31 @@
             = role.user
         %br    
         = role.to_name
+      %td
+        - form_for [@project, role] do |f|
+          - if role.name == "O"
+            = f.submit(:name => "C")
+          - elsif role.name == "C"
+            = f.submit(:name => "O")
+      %td
+        = link_to "Remove", [@project, role], :method => :delete
+- pending_invitations = @project.invitations.confirmed_is(false)
+- if pending_invitations.present?
+  %table.index
+    - pending_invitations.each do |invitation|
+      %tr{:class => cycle("even", "odd")}
+        %td.min100
+          = image_tag profile_image(invitation.user.login_email)
+        %td.members
+          %b
+            %i
+              - if invitation.user
+                = link_to invitation.user, invitation.user
+              - else
+                = invitation.user_email
+          %br    
+          Invited
+        %td
+          - semantic_form_for [@project, @project.invitations.new], :invitee => invitation.user_email do |f|
+            - f.buttons do
+              = f.commit_button "Reinvite"
