--- a/app/views/timesheets/_timesheets.html.haml
+++ b/app/views/timesheets/_timesheets.html.haml
@@ -1,11 +1,13 @@
+%h2 
+  .gray
+    Timesheets for #{@timesheet_user}
+%br
 .header
   .timesheet-description
     Description
   .right
     .timesheet-hours
       Hours
-    .timesheet-user
-      User
     .timesheet-date
       Date
     .timesheet-actions
