--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -167,6 +167,9 @@ form.formtastic p.inline-hints {
   font-size: 11px; }
 form.formtastic .date legend label, form.formtastic .time legend label, form.formtastic .datetime legend label {
   display: block !important; }
+form.formtastic.loading li.commit {
+  padding-right: 25px;
+  background: url("../images/spinner.gif") right center no-repeat; }
 form.formtastic.labels-within-fields label.error {
   padding: 0;
   margin: 0; }
@@ -325,16 +328,17 @@ form.formtastic.stack .buttons {
   padding-left: 0; }
 form.formtastic.stack li.boolean label {
   padding-left: 0; }
+form.formtastic.inline li {
+  float: left; }
+form.formtastic.inline input {
+  width: auto; }
 form.formtastic.inline fieldset {
   width: auto; }
   form.formtastic.inline fieldset.inputs {
     float: left; }
     form.formtastic.inline fieldset.inputs label {
       width: auto; }
-    form.formtastic.inline fieldset.inputs input[type=text] {
-      width: auto; }
     form.formtastic.inline fieldset.inputs li {
-      float: left;
       margin-right: 10px; }
   form.formtastic.inline fieldset.buttons {
     display: inline;
@@ -510,7 +514,7 @@ span.gray {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px; }
   #content h1 {
-    background-color: #E1EEFA;
+    background-color: #D0E4F5;
     color: #787D7B;
     text-align: center;
     padding: 15px;
@@ -717,6 +721,15 @@ span.match {
   margin-top: 5px;
   padding-top: 10px; }
 
+#upcoming a.allday {
+  background-color: #CAFCD6; }
+#upcoming table {
+  background-color: #F5F5F5;
+  padding: 5px 1px 5px 1px; }
+#upcoming .dayname {
+  text-align: center;
+  border-bottom: 1px solid #D1D1D1; }
+
 #timesheets {
   padding-top: 10px; }
   #timesheets .header {
@@ -726,9 +739,6 @@ span.match {
   #timesheets .timesheet .timesheet-hours, #timesheets .header .timesheet-hours {
     float: left;
     width: 100px; }
-  #timesheets .timesheet .timesheet-user, #timesheets .header .timesheet-user {
-    float: left;
-    width: 150px; }
   #timesheets .timesheet .timesheet-date, #timesheets .header .timesheet-date {
     float: left;
     width: 100px; }
@@ -739,7 +749,7 @@ span.match {
     float: right; }
     #timesheets .timesheet .timelogs .timelog .timelog-hours {
       float: left;
-      width: 250px; }
+      width: 100px; }
     #timesheets .timesheet .timelogs .timelog .timelog-date {
       float: left;
       width: 100px; }
