--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -159,7 +159,7 @@ span.gray
   +box-shadow("0px 0px 6px #A8A6A0")
   +border-radius("4px")
   h1
-    background-color: #E1EEFA
+    background-color: #D0E4F5
     color: #787D7B
     text-align: center
     padding: 15px
