--- a/public/stylesheets/sass/_events.sass
+++ b/public/stylesheets/sass/_events.sass
@@ -3,3 +3,12 @@
 #calendar
   margin-top: 5px
   padding-top: 10px
+#upcoming
+  a.allday
+    background-color: #CAFCD6
+  table
+    background-color: #F5F5F5
+    padding: 5px 1px 5px 1px
+  .dayname
+    text-align: center
+    border-bottom: 1px solid #D1D1D1
