--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -108,8 +108,8 @@ span.gray
     font-size: 0.9em
     text-decoration: none
   a.orange
-    background-color: #FFFFE3
-    color: #8A8A81
+    background-color: #FFEC6E
+    color: black
     +box-shadow("0px 0px 5px #C9C873")
     +border-radius("2px")
     font-size: 1em
