--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -1,9 +1,4 @@
-%h2 Available calendars
-- @calendars.each do |calendar|
-  %p
-    = calendar.name
-    - unless calendar.name == "default"
-      = link_to image_tag('delete.png'), [@calendarable, calendar], :method => :delete
-
-%h2 Create new
+%h2.gray
+  Import new calendar
+%br
 = render :partial => "form", :locals => {:calendar => @calendarable.calendars.new }
