--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,13 +6,14 @@
   %h1
     Project 
     = @project
-  %br
   .menu
     - [["Project Dashboard", "projects", nil], ["Calendar", "events", :events], ["CoEdit", "wiki_pages", :wiki_pages], ["Research Feeds", "articles", :articles], ["Tasks", "tasks", :tasks], ["Files", "assets", :assets], ["Timesheets", "timesheets", :timesheets], ["Alerts", "alerts", :alerts]].each do |link_name, link_controller, link_path|
       = link_to link_name, [@project, link_path], :class => (controller_name == link_controller) ? "current" : nil
 
 - elsif @user && !@user.new_record? 
+  %h1
+    = @user
   .menu
-    - [["Homepage", "users", nil], ["Calendar", "events", :events]].each do |link_name, link_controller, link_path|
+    - [["Homepage", "users", nil], ["My Calendar", "events", :events]].each do |link_name, link_controller, link_path|
       = link_to link_name, [User.find(@user.id), link_path], :class => (controller_name == link_controller) ? "current" : nil
 %br
