--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,13 +1,11 @@
 %h2
-  New project
+  Start a new project
 
 - semantic_form_for @project do |f|
   = error_messages_for :project
   - f.inputs do
     = f.input :name
     = f.input :description
-    = f.input :is_public
     = f.input :use_ssl
   - f.buttons do
     = f.commit_button "Create Project"
-    = link_to "Go back", root_path
