--- a/public/stylesheets/sass/_events.sass
+++ b/public/stylesheets/sass/_events.sass
@@ -4,11 +4,27 @@
   margin-top: 5px
   padding-top: 10px
 #upcoming
-  a.allday
-    background-color: #CAFCD6
+  a
+    background-color: #BACDD6
+    color: black
+    margin: 1px 1px 2px 1px
   table
-    background-color: #F5F5F5
     padding: 5px 1px 5px 1px
   .dayname
     text-align: center
     border-bottom: 1px solid #D1D1D1
+    background-color: #F5F5F5
+  td
+    overflow: hidden
+    white-space: nowrap
+    border: 1px solid #d5d5d5
+  .ec-event-cell
+    cursor: pointer
+    vertical-align: top
+    padding-right: 1px
+    padding-left: 2px
+  .ec-event-cell a
+    text-decoration: none
+    display: block
+    width: 100%
+    height: 100%
